# RareUpdater

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  backend.cpp  backend.h  build.rs  install.js  main.cpp  main.qml  qml.qrc
.github/workflows/: rust.yml
RareUpdater/: CMakeLists.txt  RareUpdater_de_DE.ts  backend.cpp  backend.h  config.cpp  config.h  console.cpp  console.h  console.ui  download.qml  downloader.cpp  downloader.h  enums.cpp  enums.h  install.js  main.cpp  main.qml  qml.qrc  quickprocess.cpp  quickprocess.h  rareupdater.cpp  rareupdater.h  rareupdater.hpp  rareupdater.ui  resources.qrc  uninstall_dialog.ui  uninstalldialog.cpp  uninstalldialog.h  uninstalldialog.ui  utils.h  versions.cpp  versions.hpp
RareUpdater/cmake/: QtStaticCMake.cmake
RareUpdater/stylesheets/Quark/: stylesheet.qss
RareUpdater/translations/: RareUpdater_de_DE.ts
misc/: README.md  qt5-mingw64-static.ps1  qt5-mingw64-x64-static.ps1  qt5-msvc2015-x64-static.bat  qt5-msvc2015-x64-static.ps1
quazip/: .gitattributes  .gitignore  CONTRIBUTING.md  COPYING  Doxyfile  QuaZip-1.x-migration.md  README.md
quazip/.github/workflows/: ci.yml
quazip/qztest/: qztest.qrc
src/: config.rs  install.rs  main.rs
