[package]
name = "rare-updater"
version = "0.1.0"
edition = "2021"

build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0" }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
zip = "0.6.2"
# subprocess = "0.2.9"
dirs = "4.0.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
mslnk="0.1.8"

[build-dependencies]
winres = "0.1.12"